--- a/public/html/fnji-header.html
+++ b/public/html/fnji-header.html
@@ -122,6 +122,8 @@
 									<span class="separator">/</span>
 									<a href="javascript:" onclick="login()">登录</a>
 								</div>
+								<!-- <div class="item user-box"><a href="/member" class="user-info"><i class="u-icon u-icon-level-1"></i> <span>墨子</span></a> <div class="dropdown"><div class="top"><i class="u-icon u-icon-avatar"></i> <div class="user-title">
+                                    墨子<br> <small>LV.1</small></div></div> <div class="bottom"><a href="/member" class="btn user-btn left">进入个人中心</a> <a href="javascript:" class="btn user-btn right">退出</a></div></div></div> -->
 							</div>
 						</div>		
 					</div>
@@ -130,5 +132,10 @@
 		</div>
 		
 	</div>
+	<div id="login"></div>
+	<div class="modal-backdrop" style=""></div>
+	<script src="../js/jquery-1.11.3.js"></script>
+	<script src="../js/fnji_head.js"></script>
+	<script src="../js/fnji_login.js"></script>
 </body>
 </html
