--- a/public/html/fnji-detail.html
+++ b/public/html/fnji-detail.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/common.css">
   <link rel="stylesheet" href="../css/fnji-content.css">
   <link rel="stylesheet" href="../css/fnji-detail.css">
+  <!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
 </head>
 <body>
    <!--头部导航-->
