--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>梵几·家具品牌 fnji furniture online shop</title>
 	<link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/furniture-list.css">
+    <!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
     <link rel="stylesheet" href="../css/fnji-login.css">
 	<style>
 		@font-face{
