--- a/public/html/fnji-detail.html
+++ b/public/html/fnji-detail.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../css/common.css">
   <link rel="stylesheet" href="../css/fnji-content.css">
   <link rel="stylesheet" href="../css/fnji-detail.css">
-  <!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
 </head>
 <body>
    <!--头部导航-->
@@ -189,7 +188,9 @@
    <!-- 网页页面脚-->
   <div id="page-footer"></div>
   <div id="login"></div>
+  <!-- <div id="register"></div> -->
   <script src="../js/jquery-1.11.3.js"></script>
+  <script src="../js/fnji_head.js"></script>
   <script src="../js/fnji_detail.js"></script>
   <script src="../js/fnji_common.js"></script>
 </body>
