--- a/public/html/fnji-header.html
+++ b/public/html/fnji-header.html
@@ -5,7 +5,8 @@
 	<title>梵几·家具品牌 fnji furniture online shop</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/fnji-header.css">
-	
+	<link rel="stylesheet" href="../css/fnji-login.css">	
+	<!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
 	<style>
 		@font-face{
             font-family: 'fangzheng';
@@ -133,9 +134,9 @@
 		
 	</div>
 	<div id="login"></div>
-	<div class="modal-backdrop" style=""></div>
+	<div id="register"></div>
+	<div class="modal-backdrop" style="display: none"></div>
 	<script src="../js/jquery-1.11.3.js"></script>
 	<script src="../js/fnji_head.js"></script>
-	<script src="../js/fnji_login.js"></script>
 </body>
 </html
