--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>梵几·家具品牌 fnji furniture online shop</title>
-	<link rel="stylesheet" href="../css/common.css">
-    <!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
-    <link rel="stylesheet" href="../css/fnji-login.css">
+	<!-- <link rel="stylesheet" href="../css/common.css"> -->
+    <link rel="stylesheet" href="../css/furniture-list.css">
+    <!-- <link rel="stylesheet" href="../css/fnji-login.css"> -->
 	<style>
 		@font-face{
             font-family: 'fangzheng';
@@ -147,10 +147,11 @@
     <!--  -->
     <div>
         <!-- 登录页面 -->
-        <div class="modal modal-member-login">
+        <div id="login">
         </div>
     </div>
     <script src="../js/jquery-1.11.3.js"></script>
     <script src="../js/fnji_common.js"></script>
+    <!-- <script src="../js/fnji_index.js"></script> -->
 </body>
 </html
