--- a/public/html/fnji_login.html
+++ b/public/html/fnji_login.html
@@ -22,16 +22,21 @@
                     </div> 
                     <form>
                         <div class="form-row form-row-phone">
-                            <input type="text" autocomplete="off" placeholder="手机" required="required" class="form-control phone"> <button type="button" class="btn verify-code">验证</button></div> <div class="form-row"><input type="text" autocomplete="off" placeholder="验证码" required="required" class="form-control verify-code" id="verify-code"></div> 
-                            <div class="form-row" style="height: 18px;"></div> 
-                            <div class="block-btn">
-                                <button type="submit" class="btn" id="login1">登录</button>
-                            </div>
+                            <input type="text" autocomplete="off" placeholder="手机" required="required" class="form-control phone"> 
+                            <button type="button" class="btn verify-code">验证</button>
+                        </div> 
+                        <div class="form-row">
+                            <input type="text" autocomplete="off" placeholder="验证码" required="required" class="form-control verify-code" id="verify-code">
+                        </div> 
+                        <div class="form-row" style="height: 18px;"></div> 
+                        <div class="block-btn">
+                            <button type="button" class="btn" id="login1">登录</button>
+                        </div>
                     </form> 
-                        <div class="text-muted">
+                    <div class="text-muted">
                         还没有梵几账号
                         <a href="javascript:" class="link">点击注册</a>
-                        </div> 
+                    </div> 
                     <div class="block-btn">
                         <button class="btn btn-muted">账户登录</button>
                     </div>
