--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -147,8 +147,8 @@
     <!--  -->
     <div>
         <!-- 登录页面 -->
-        <div id="login">
-        </div>
+        <div id="login"></div>
+        <div id="register"></div>
     </div>
     <script src="../js/jquery-1.11.3.js"></script>
     <script src="../js/fnji_common.js"></script>
