--- a/public/html/fnji_register.html
+++ b/public/html/fnji_register.html
@@ -1,7 +1,7 @@
 
 </head>
 <body>
-        <div class="modal modal-member-register" style="display: none;"><div class="modal-dialog"><div class="modal-content"><button class="close">×</button> <div class="modal-title">
+        <div class="modal modal-member-register" style="display: none;"><div class="modal-dialog"><div class="modal-content"><button class="close" onclick="over()">×</button> <div class="modal-title">
                 注册
             </div> <form><div class="form-row form-row-phone"><input type="text" autocomplete="off" placeholder="手机/邮箱" required="required" class="form-control"> <button type="button" class="btn" style="font-size: 12px;">验证</button></div> <div class="form-row"><input type="text" autocomplete="off" placeholder="验证码" required="required" class="form-control"></div> <div class="form-row"><input type="password" autocomplete="off" placeholder="密码" required="required" class="form-control"></div> <div class="form-row"><input type="password" autocomplete="off" placeholder="重复密码" required="required" class="form-control"></div> <div class="form-row" style="border: medium none;"><label class="control checkbox"><input type="checkbox"> <span class="control-indicator"></span>
                         我已阅读并同意遵守
