--- a/public/html/fnji-detail.html
+++ b/public/html/fnji-detail.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="../css/common.css">
   <link rel="stylesheet" href="../css/fnji-content.css">
   <link rel="stylesheet" href="../css/fnji-detail.css">
+  <link rel="stylesheet" href="../css/fnji-header.css">
+  <link rel="stylesheet" href="../css/furniture-list.css">
 </head>
 <body>
    <!--头部导航-->
@@ -187,8 +189,17 @@
     </div>
   </div>
    <!-- 网页页面脚-->
-  <div id="page-footer"></div>
-  <div id="login"></div>
+  <div>
+    <div id="page-footer"></div>
+    <div id="login"></div>
+    <div id="register"></div>
+    <div style="position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;z-index: 9999999;background-color: rgb(0, 0, 0);overflow: auto;opacity: 1;display: none;">
+      <img style="position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px; max-width: 100%; max-height: 600px; margin: auto;">
+      <div style="position: fixed; top: 0px; right: 0px; color: rgb(255, 255, 255); cursor: pointer; font-size: 40px; line-height: 1.2; padding: 5px 10px;">×</div>
+    </div>
+    <div class="modal-backdrop" style="display: none;"></div>
+  </div>
+  
   <!-- <div id="register"></div> -->
   <script src="../js/jquery-1.11.3.js"></script>
   <script src="../js/fnji_head.js"></script>
