--- a/public/html/fnji-header.html
+++ b/public/html/fnji-header.html
@@ -119,7 +119,7 @@
 							<div class="item has-hover-text">
 								<i class="u-icon u-icon-user"></i>
 								<div class="hover-text">
-									<a href="javascript:">注册</a>
+									<a href="javascript:" onclick="register()">注册</a>
 									<span class="separator">/</span>
 									<a href="javascript:" onclick="login()">登录</a>
 								</div>
