--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -99,25 +99,28 @@
                     <div> 
                         <table class="m-list-table">
                             <tbody>
-                                <tr>
-                                    <td rowspan="2" colspan="2">
-                                        <a href="/furniture-detail?id=4889" data-pos="all.chair.4889" class="cell" style="background-color: rgb(248, 242, 229); transform: translateY(0px);"><div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1524644442_7154.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2Y4ZjJlNQ==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1524644442_7154.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2Y4ZjJlNQ==&quot;);" lazy="loaded"></div> 
+                                 <tr>
+                                     <td rowspan="2" colspan="2">
+                                    <!--
+                                     <a href="/furniture-detail?id=4889" data-pos="all.chair.4889" class="cell" style="background-color: rgb(248, 242, 229); transform: translateY(0px);"><div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1524644442_7154.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2Y4ZjJlNQ==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1524644442_7154.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2Y4ZjJlNQ==&quot;);" lazy="loaded"></div> 
                                             <div class="cell-overlay">
                                                 <div class="title">螳螂椅</div>   
                                                 <div class="price">¥4200.00</div>
                                             </div>   
-                                        </a>
+                                        </a> -->
                                     </td>
                                     <td rowspan="1" colspan="1">
+                                        <!--  
                                         <a href="/furniture-detail?id=4847" data-pos="all.chair.4847" class="cell" style="background-color: rgb(232, 236, 231); transform: translateY(0px);">
                                             <div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1524649908_1947.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1524649908_1947.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==&quot;);" lazy="loaded"></div> 
                                             <div class="cell-overlay">
                                                 <div class="title">青山椅</div>   
                                                 <div class="price">¥2200.00</div>
                                             </div>   
-                                        </a>
-                                    </td>
+                                        </a>-->
+                                    </td>  
                                     <td rowspan="1" colspan="1">
+                                        <!--
                                         <a href="/furniture-detail?id=6373" data-pos="all.chair.6373" class="cell" style="background-color: rgb(232, 236, 231); transform: translateY(0px);">
                                             <div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==&quot;);" lazy="loaded"></div> 
                                             <div class="cell-overlay">
@@ -128,9 +131,10 @@
                                                 <i class="u-icon u-icon-fnji-new"></i>
                                             </div> 
                                         </a>
+                                        <td class="empty"></td>-->
                                     </td> 
                                     <td class="empty"></td>
-                                </tr>
+                                </tr> 
                                 <tr>
                                     <td rowspan="1" colspan="1">
                                         <a href="/furniture-detail?id=2734" data-pos="all.chair.2734" class="cell" style="background-color: rgb(242, 234, 223); transform: translateY(0px);">
@@ -155,6 +159,7 @@
     </div>
     <script src="../js/jquery-1.11.3.js"></script>
     <script src="../js/fnji_common.js"></script>
+    <script src="../js/fnji_index.js"></script>
     <!-- <script src="../js/fnji_index.js"></script> -->
 </body>
 </html
