--- a/public/html/fnji-detail.html
+++ b/public/html/fnji-detail.html
@@ -21,7 +21,7 @@
         <div class="container-fluid m-sku-info">
           <div class="d-flex">
             <div class="block-images">
-              <div style="background-color: rgb(248, 242, 229);">
+              <!-- <div style="background-color: rgb(248, 242, 229);">
                 <div class="m-image-360" style="position: relative;">
                   <div class="img360_shelf" style="width: inherit; height: inherit;">
                     <div class="inner">
@@ -58,7 +58,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div> 
             <div class="block-info">
               <div class="m-product-info d-flex flex-column justify-content-between">
