--- a/public/html/fnji-detail.html
+++ b/public/html/fnji-detail.html
@@ -20,8 +20,8 @@
       <div class="page-furniture-detail furniture">
         <div class="container-fluid m-sku-info">
           <div class="d-flex">
-            <div class="block-images">
-              <!-- <div style="background-color: rgb(248, 242, 229);">
+            <!-- <div class="block-images">
+              <div style="background-color: rgb(248, 242, 229);">
                 <div class="m-image-360" style="position: relative;">
                   <div class="img360_shelf" style="width: inherit; height: inherit;">
                     <div class="inner">
@@ -58,7 +58,7 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
             </div> 
             <div class="block-info">
               <div class="m-product-info d-flex flex-column justify-content-between">
@@ -67,7 +67,7 @@
         <div class="bom">F3-Y-13-013-02</div> 
         <div class="price"><span>
               ¥4200.00
-          </span> <!---->
+          </span>
         </div> <hr> 
         <div class="spec-group color">
           <div class="spec-name">颜色 colour</div> 
@@ -101,13 +101,14 @@
           <div class="spec-group">
             <div class="spec-name">木色 material</div> 
             <ul class="spec-list">
-              <li class=""><!---->
+              <li class="">
+                
                   美国白蜡木
               </li>
-              <li class=""><!---->
+              <li class="">
                   美国白蜡木（骏马黑）
               </li>
-              <li class="active"><!---->
+              <li class="active">
                   美国黑胡桃木
               </li>
             </ul>
@@ -132,8 +133,8 @@
           <div class="spec-group">
             <div class="spec-name">发货周期 delivery</div> 
             <div class="muted-text">家具制作周期为6-8周</div>
-          </div> <!----> 
-          <div class="spec-group"><!----> <!----> <!----> <!----></div>
+          </div>  
+          <div class="spec-group">   </div>
         </div> 
         <div class="block-bottom">
           <div class="box-btn">
@@ -148,7 +149,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div> 
 <!-- 加入购物车 -->
 <div class="modal modal-cart-tip" style="display: none;">
