--- a/public/html/fnji-header.html
+++ b/public/html/fnji-header.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>梵几·家具品牌 fnji furniture online shop</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/fnji-header.css">
-	<link rel="stylesheet" href="../css/fnji-login.css">	
+	<link rel="stylesheet" href="../css/fnji-login.css">
 	<!-- <link rel="stylesheet" href="../css/furniture-list.css"> -->
 	<style>
 		@font-face{
@@ -14,17 +15,18 @@
         }
 	</style>
 </head>
+
 <body>
 	<div id="app">
-	<!--头部导航-->
-		<div  class="page-header font-fz">
+		<!--头部导航-->
+		<div class="page-header font-fz">
 			<div class="bar-top">
 				<div class="container">
 					<div class="block-center" style="padding-right:4px;">
 						生长于野
 						<span class="separator ">·</span>
 						安于室
-						</div>
+					</div>
 					<div class="block-right">
 						<ul class="nav navbar-item align-self-end">
 							<li class="nav-item">
@@ -62,7 +64,7 @@
 												<li class="nav-item"><a href="" class="nav-link">其他</a></li>
 											</ul>
 										</div>
-									</div>	
+									</div>
 								</li>
 								<li class="nav-item"><a href="" class="nav-link">家居</a>
 									<div class="block-sub-nav">
@@ -91,11 +93,11 @@
 								<li class="nav-item"><a href="" class="nav-link">栏目</a>
 									<div class="block-sub-nav">
 										<div class="inner" style="margin-left:0px">
-												<ul class="nav">
-													<li class="nav-item"><a href="" class="nav-link">梵几在家</a></li>
-													<li class="nav-item"><a href="" class="nav-link">串门</a></li>
-													<li class="nav-item"><a href="" class="nav-link">ARTSTAGE</a></li>
-												</ul>
+											<ul class="nav">
+												<li class="nav-item"><a href="" class="nav-link">梵几在家</a></li>
+												<li class="nav-item"><a href="" class="nav-link">串门</a></li>
+												<li class="nav-item"><a href="" class="nav-link">ARTSTAGE</a></li>
+											</ul>
 										</div>
 									</div>
 								</li>
@@ -118,20 +120,20 @@
 							</a>
 							<div class="item has-hover-text">
 								<i class="u-icon u-icon-user"></i>
-								<div class="hover-text">
+								<div class="hover-text" style="display:none">
 									<a href="javascript:" onclick="register()">注册</a>
 									<span class="separator">/</span>
 									<a href="javascript:" onclick="login()">登录</a>
 								</div>
-								<!-- <div class="item user-box"><a href="/member" class="user-info"><i class="u-icon u-icon-level-1"></i> <span>墨子</span></a> <div class="dropdown"><div class="top"><i class="u-icon u-icon-avatar"></i> <div class="user-title">
-                                    墨子<br> <small>LV.1</small></div></div> <div class="bottom"><a href="/member" class="btn user-btn left">进入个人中心</a> <a href="javascript:" class="btn user-btn right">退出</a></div></div></div> -->
+								<div class="item user-box" style="display:block"><a href="/member" class="user-info"><i class="u-icon u-icon-level-1"></i> <span>墨子</span></a> <div class="dropdown"><div class="top"><i class="u-icon u-icon-avatar"></i> <div class="user-title">
+                                    墨子<br> <small>LV.1</small></div></div> <div class="bottom"><a href="/member" class="btn user-btn left">进入个人中心</a> <a href="javascript:" class="btn user-btn right">退出</a></div></div></div>
 							</div>
-						</div>		
+						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</div>
-		
+
 	</div>
 	<div id="login"></div>
 	<div id="register"></div>
@@ -139,4 +141,5 @@
 	<script src="../js/jquery-1.11.3.js"></script>
 	<script src="../js/fnji_head.js"></script>
 </body>
+
 </html
