--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>梵几·家具品牌 fnji furniture online shop</title>
@@ -142,7 +141,7 @@
                                         <td rowspan="1" colspan="1">
                                             <!--
                                         <a href="/furniture-detail?id=6373" data-pos="all.chair.6373" class="cell" style="background-color: rgb(232, 236, 231); transform: translateY(0px);">
-                                            <div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==&quot;);" lazy="loaded"></div> 
+                                            <div class="cell-image" data-src="http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==" style="background-image: url(&quot;http://static.fnji.com/temp/upload/v2/s20480_1534393610_9431.png?imageMogr2/thumbnail/500x>/format/jpg/background/I2U4ZWNlNw==&quot;);"></div> 
                                             <div class="cell-overlay">
                                                 <div class="title">青山椅（儿童版）</div>   
                                                 <div class="price">¥1600.00</div>
