--- a/public/html/fnji-header.html
+++ b/public/html/fnji-header.html
@@ -46,7 +46,7 @@
 				<div class="container">
 					<div class="d-flex">
 						<div class="block-left">
-							<a href="" class="navbar-brand"></a>
+							<a href="/html/fnji_index.html" class="navbar-brand"></a>
 						</div>
 						<div class="block-center center-menu">
 							<ul class="nav navbar-nav align-self-end">
@@ -118,15 +118,25 @@
 								<i class="u-icon u-icon-list"></i>
 								<span class="hover-text">订单</span>
 							</a>
-							<div class="item has-hover-text">
+							<div class="item has-hover-text" class="display:none">
 								<i class="u-icon u-icon-user"></i>
-								<div class="hover-text" style="display:none">
+								<div class="hover-text">
 									<a href="javascript:" onclick="register()">注册</a>
 									<span class="separator">/</span>
 									<a href="javascript:" onclick="login()">登录</a>
 								</div>
-								<div class="item user-box" style="display:block"><a href="/member" class="user-info"><i class="u-icon u-icon-level-1"></i> <span>墨子</span></a> <div class="dropdown"><div class="top"><i class="u-icon u-icon-avatar"></i> <div class="user-title">
-                                    墨子<br> <small>LV.1</small></div></div> <div class="bottom"><a href="/member" class="btn user-btn left">进入个人中心</a> <a href="javascript:" class="btn user-btn right">退出</a></div></div></div>
+							</div>
+							<!-- 用户登录模块 -->
+							<div class="item user-box" style=""><a href="/member" class="user-info">
+								<i class="u-icon u-icon-level-1"></i>
+									<span>墨子</span></a>
+								<div class="dropdown">
+									<div class="top"><i class="u-icon u-icon-avatar"></i>
+										<div class="user-title">
+											墨子<br> <small>LV.1</small></div>
+									</div>
+									<div class="bottom"><a href="/member" class="btn user-btn left">进入个人中心</a> <a href="javascript:" class="btn user-btn right">退出</a></div>
+								</div>
 							</div>
 						</div>
 					</div>
