--- a/public/html/fnji_index.html
+++ b/public/html/fnji_index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>梵几·家具品牌 fnji furniture online shop</title>
     <!-- <link rel="stylesheet" href="../css/common.css"> -->
-    <link rel="stylesheet" href="../css/furniture-list.css">
+    <link rel="stylesheet" href="/css/furniture-list.css">
     <!-- <link rel="stylesheet" href="../css/fnji-login.css"> -->
     <style>
         @font-face{
@@ -26,8 +27,7 @@
                         <div class="slick-list draggable">
                             <div class="slick-track" style="opacity: 1; width: 6745px;">
                                 <div class="slick-slide" data-slick-index="0" aria-hidden="true" style="width: 1349px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 500ms linear 0s;"
-                                    role="tabpanel" id="slick-slide10" aria-describedby="slick-slide-control10"
-                                    tabindex="-1">
+                                    role="tabpanel" id="slick-slide10" tabindex="-1">
                                     <div>
                                         <a href="/furniture" style="width: 100%; display: inline-block;" tabindex="-1">
                                             <div class="item g-ratio-box" style="background-image: url(&quot;http://static.fnji.com/temp/upload/s2048_1540519563_5657.jpg&quot;);">
